[package]
name = "ava"
version = "0.0.3"
authors = ["Guilherme G. Ferrari <gg.ferrari@gmail.com>"]
description = "N-body experiments in Rust"
homepage = "https://crates.io/crates/ava"
documentation = "https://docs.rs/ava"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ggf84/ava"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bincode = "~1.0"
rand = "~0.5"
rayon = "~1.0"
serde = "~1.0"
serde_derive = "~1.0"
soa_derive = "~0.7"

[features]
default = ["f64"]
f32 = []    # enable single precision
f64 = []    # enable double precision
nightly-bench = []
