[package]
name = "ava"
version = "0.0.3"
authors = ["Guilherme G. Ferrari <gg.ferrari@gmail.com>"]
description = "A Rust toolkit for gravitational N-body simulations"
#homepage = "https://github.com/ggf84/ava"
repository = "https://github.com/ggf84/ava"
documentation = "https://docs.rs/ava"
readme = "README.md"
license = "MIT"
categories = ["science"]
edition = "2018"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
bincode = "1.0"
itertools = "0.8"
rand = "0.6"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"

[features]
default = ["f64"]
f32 = []    # enable single precision
f64 = []    # enable double precision
nightly = []
